--- a/producer_consumer/Makefile
+++ b/producer_consumer/Makefile
@@ -1,13 +1,13 @@
 all: parent producer consumer
 
 parent: parent.c
-	gcc -w parent.c -o parent -lpthread
+	gcc -w parent.c -o parent
 
 producer: producer.c
-	gcc producer.c -o producer -lpthread
+	gcc producer.c -o producer
 
 consumer: consumer.c
-	gcc consumer.c -o consumer -lpthread
+	gcc consumer.c -o consumer
 
 clean:
 	rm -f parent consumer producer
